# ai-model-discovery

./: .env.example  .gitignore  COMMANDS.sh  QUICKSTART.md  README.md  collect_multi_repository.py  demo_advanced_queries.py  dense_index.faiss  install.sh  pyproject.toml  requirements.txt  run_app.py  test_results_10_prompts.txt  test_search_engine.py  validate_graph.py  verify_replicate_setup.py
app/: main.py
data/: README.md  ai_models_multi_repo.ttl  text_to_sparql_validation_results.csv  text_to_sparql_validation_results_deepseek7b.csv
docs/: API_SETUP_GUIDE.md  BENCHMARK_METHODOLOGY.md  BENCHMARK_REPORTS.md  CATALOGO_CORRECCIONES_SPARQL.md  CHANGELOG_SPRINT1.md  DAIMO_ONTOLOGY_IMPROVEMENTS.md  DEVELOPMENT_LOG.md  EXPERIMENT_ANALYSIS.md  EXPERIMENT_HISTORY.md  FINAL_REDUNDANCY_ELIMINATION.md  IMPLEMENTATION_PLAN.md  INTEGRATIONS.md  INYECCION_INTELIGENTE.md  KNOWLEDGE_GRAPH.md  METADATA_ANALYSIS.md  MULTI_REPOSITORY_GUIDE.md  NUEVAS_CORRECCIONES_SINTACTICAS.md  NUEVOS_EJEMPLOS_RAG_PYTORCH_NLP.md  ONTOLOGY_REDUNDANCY_ANALYSIS.md  PAPERSWITHCODE_MAPPING_ANALYSIS.md  POST_PROCESAMIENTO_SPARQL.md  PROJECT_SETUP.md  PROJECT_STATUS.md  PROPERTY_COVERAGE_IMPROVEMENTS.md  REFACTORIZATION_SUMMARY.md  REPLICATE_IMPLEMENTATION_SUMMARY.md  REPLICATE_METADATA_MAPPING.md  REPLICATE_QUICKSTART.md  REPLICATE_SETUP.md  SEARCH_GUIDE.md  SPRINT1_VALIDATION.md  TENSORFLOW_HUB_SETUP.md
experiments/: README.md
knowledge_graph/: __init__.py  build_graph.py  multi_repository_builder.py
llm/: __init__.py  ontology_dictionary.py  prompts.py  query_validator.py  rag_sparql_examples.py  (+2 more)
(+52 files in other folders)
