[tool.poetry]
name = "ai-model-discovery"
version = "0.1.0"
description = "Motor experimental de descubrimiento de modelos de IA usando grafos de conocimiento y búsqueda semántica"
authors = ["Edmundo Mori <edmundo.mori.orrillo@upm.es>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# RDF and SPARQL
rdflib = "^7.0.0"
# HTTP and API clients
requests = "^2.31.0"
huggingface-hub = "^0.20.0"
# LLM integrations
openai = "^1.10.0"
anthropic = "^0.18.0"
# Data processing
pandas = "^2.1.0"
numpy = "^1.26.0"
# Notebooks and visualization
jupyter = "^1.0.0"
ipykernel = "^6.27.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
# Utilities
python-dotenv = "^1.0.0"
tqdm = "^4.66.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
